--- a/box-resources-demo/en/login.html
+++ b/box-resources-demo/en/login.html
@@ -12,6 +12,7 @@
         <![endif]-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+		<script src="../../appcell-resources/js/utils.js"></script>
         <!--
         <script src="https://demo.personium.io/HomeApplication/__/js/login.js"></script>
         <script src="https://demo.personium.io/HomeApplication/__/js/message_en.js"></script>
