--- a/bar/90_contents/src/main.html
+++ b/bar/90_contents/src/main.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -41,6 +41,11 @@
           "name": "AppMarket", // With context properly set, it can be AppMarket_biz
           "icon": "001lighticons-31full.png",
           "url": "applicationmarket.html",
+          "used": true
+      }, {
+          "name": "Message",
+          "icon": "001lighticons-02full.png",
+          "url": "message.html",
           "used": true
       }
     ];
